Add support for Rust in the kernel
	- Update rust subproject to add kernel allocator bindings
	- Update Makefile to link generated Rust library
	- Add cprint() method for raw console output now we have Rust
	  macros to format things for us
	- Add basic hello_rust() smoke test function

--- a/rust/.cargo/config.toml
+++ b/rust/.cargo/config.toml
@@ -1,3 +1,6 @@
 [build]
-target = ["i686-unknown-linux-gnu"]
+target = "i586-unknown-linux-gnu"
 
+[unstable]
+build-std = ["core", "alloc", "compiler_builtins"]
+build-std-features = ["compiler-builtins-mem"]
